--- a/index.html
+++ b/index.html
@@ -46,11 +46,19 @@ title: "UserFrosting | Modern user management for PHP"
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-5 col-lg-offset-1" style="text-align: right">
-                <p>Chances are you're here because you have a great idea for a user-oriented website. Whether it's a private forum for your WoW guild, an employee management system for your small business, or the next big social network, we're guessing you want to get started on your awesome new idea as quickly as possible. You most certainly do not want to spend your time writing code to manage user authentication and authorization. <br><br> Userfrosting delivers. </p>
+            <div class="col-lg-5 col-lg-offset-1">
+                <p>Chances are you're here because you have a great idea for a user-oriented website. Whether it's a private forum for your WoW guild, an employee management system for your small business, or the next big social network, we're guessing you want to get started on your awesome new idea as quickly as possible. You most certainly do not want to spend your time writing code to manage user authentication and authorization.
+                </p>
+                <p>Userfrosting delivers. </p>
             </div>
             <div class="col-lg-5">
-                <p>With some basic configuration and an easy-to-use installer, you'll be ready to create and manage user accounts in 5 minutes or less.  All you need is a web server running PHP 5.4 or greater, and a SQL database. <br><br>UserFrosting is meant for developers who want to take advantage of a pre-designed user management system, but write their own code in native PHP.<br><br> Get started on your project, without starting from 'Hello World".</p>
+                <p>
+                    With some basic configuration and an easy-to-use installer, you'll be ready to create and manage user accounts in 5 minutes or less.  All you need is a web server running PHP 5.4 or greater, and a SQL database.
+                </p>
+                <p>
+                    UserFrosting is meant for developers who want to take advantage of a pre-designed user management system, but write their own code in native PHP.
+                </p>
+                <p>Get started on your project, without starting from 'Hello World".</p>
             </div>
         </div>
     </div>
@@ -219,10 +227,10 @@ title: "UserFrosting | Modern user management for PHP"
                 </a> 
             </div>
             <div class="col-sm-4 palette-button">
-                <a href="{{site.url}}/api" class="palette-link">
+                <a href="#" class="palette-link">
                     <div class="palette-text">
                         <i class="fa fa-4x fa-code"></i><br>
-                        API
+                        API (Coming soon!)
                     </div>
                 </a> 
             </div>            
@@ -231,11 +239,11 @@ title: "UserFrosting | Modern user management for PHP"
 </section>    
     
 <!-- Contact Section -->
-<section id="support" class="">
+<section id="help" class="">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Support</h2>
+                <h2>Get Help with UserFrosting</h2>
                 <hr class="star-primary">
             </div>
         </div>
