update troubleshooting guide

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: new
-title: "UserFrosting | Modern user management for PHP"
+title: "UserFrosting | Modern, open source user management for PHP"
 ---
 
 <!-- Header -->
