--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: new
+layout: main
 title: "UserFrosting | Modern, open source user management for PHP"
 ---
 
@@ -255,42 +255,6 @@ title: "UserFrosting | Modern, open source user management for PHP"
         </div>
     </div>
 </section>
-
-<!-- Footer -->
-<footer class="text-center">
-    <div class="footer-above">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col col-md-4">
-                    <h3><a href="http://cliparts.co">ClipArts</a>Cupcake Graphic by Jay Reed</h3>
-                </div>
-                <div class="footer-col col-md-4">
-                     <h3>Copyright &copy; Userfrosting 2015</h3>
-                </div>
-                <div class="footer-col col-md-4">
-                    <h3>About Freelancer</h3>
-                    <p>Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="footer-below">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                   
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-
-<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-<div class="scroll-top page-scroll visible-xs visible-sm">
-    <a class="btn btn-primary" href="#page-top">
-        <i class="fa fa-chevron-up"></i>
-    </a>
-</div>
 
 <!-- Portfolio Modals -->
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
