--- a/installation/index.html
+++ b/installation/index.html
@@ -171,7 +171,7 @@ $app->configureMode('dev', function () use ($app) {
                 </p>
                 
                 <p>
-                    In the meantime, there is a workaround: you can install [Helicon Ape](http://www.helicontech.com/ape/), which provides support for Apache <code>.htaccess</code> and <code>.htpasswd</code> configuration files in Microsoft IIS.  Choose "full server download" when prompted by the Helicon Ape installer.
+                    In the meantime, there is a workaround: you can install <a href="http://www.helicontech.com/ape/">Helicon Ape</a>, which provides support for Apache <code>.htaccess</code> and <code>.htpasswd</code> configuration files in Microsoft IIS.  Choose "full server download" when prompted by the Helicon Ape installer.
                 </p>
             </div>
         </div>
