--- a/index.html
+++ b/index.html
@@ -37,27 +37,32 @@ title: "UserFrosting | Modern, open source user management for PHP"
 </header>
 
 <!-- About Section -->
-<section class="success" id="about">
+<section class="beta" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2>About</h2>
-                <hr class="star-light">
+                <hr class="star-primary">
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-5 col-lg-offset-1">
-                <p>Chances are you're here because you have a great idea for a user-oriented website. Whether it's a private forum for your WoW guild, an employee management system for your small business, or the next big social network, we're guessing you want to get started on your awesome new idea as quickly as possible. You most certainly do not want to spend your time writing code to manage user authentication and authorization.
+            <div class="col-lg-8 col-lg-offset-2">
+                <p>Chances are you're here because you have a great idea for a user-oriented website.</p>
+                <p>Whether it's a private forum for your WoW guild, an employee management system for your small business, or the next big social network, we're guessing you want to get started on your awesome new idea as quickly as possible. You most certainly do not want to spend your time writing code to manage user authentication and authorization.
                 </p>
-                <p>Userfrosting delivers. </p>
-            </div>
-            <div class="col-lg-5">
+                <p><strong>Userfrosting delivers.</strong></p>
                 <p>
                     With some basic configuration and an easy-to-use installer, you'll be ready to create and manage user accounts in 5 minutes or less.  All you need is a web server running PHP 5.4 or greater, and a SQL database.
                 </p>
+                <p class="faq-question">Who is UserFrosting meant for?</p>
                 <p>
-                    UserFrosting is meant for developers who want to take advantage of a pre-designed user management system, but write their own code in native PHP.
+                    UserFrosting is meant for individuals who have some background in programming, but are not familiar with all of the modern tools available to make development in PHP faster, and to make your code better structured and easier to manage.  By starting with UserFrosting, you will be comfortably introduced to Composer (the dependency manager), MVC, the front-controller pattern, and RESTful URLs.
                 </p>
+                <p class="faq-question">Who uses UserFrosting?</p>
+                <p>
+                    All sorts of people!  Check out our <a href="{{site.url}}/gallery">gallery of sites</a> that are built on UserFrosting.
+                </p>
+                
                 <p>Get started on your project, without starting from 'Hello World".</p>
             </div>
         </div>
@@ -65,7 +70,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
 </section>
 
 <!-- Features Grid Section -->
-<section id="features">
+<section id="features" class="alpha">
     <div class="container portfolio">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -176,8 +181,8 @@ title: "UserFrosting | Modern, open source user management for PHP"
     </div>
 </section>
 
-<!-- Contact Section -->
-<section id="get-started" class="">
+<!-- Getting Started Section -->
+<section id="get-started" class="beta">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -238,8 +243,8 @@ title: "UserFrosting | Modern, open source user management for PHP"
     </div>
 </section>    
     
-<!-- Contact Section -->
-<section id="help" class="">
+<!-- Help Section -->
+<section id="help" class="alpha">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
