--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -27,6 +27,8 @@ title: "UserFrosting | Tutorials"
                 <p>Learn how to create a new, access-controlled page and add a link to it in the side menu bar.</p>
                 <p><strong><a href="{{site.url}}/tutorials/lesson-2-process-form"><i class="fa fa-mortar-board"></i> Lesson 2: processing a form submission</a></strong></p>
                 <p>Learn how to submit a form via AJAX, validate the submitted data, manipulate the data model and update user information in the database, and display a success message upon completion.</p>
+                <p><strong><a href="{{site.url}}/tutorials/lesson-3-data-model"><i class="fa fa-mortar-board"></i> Lesson 3: extending the data model</a></strong></p>
+                <p>Learn how to work with your own data tables in UserFrosting by extending the <code>MySqlDatabaseObject</code> and <code>MySqlObjectLoader</code> classes.  This will allow you to easily create, update, view, delete, and link data in your database.</p>                
             </div>
         </div>
     </div>
