--- a/gallery/index.html
+++ b/gallery/index.html
@@ -23,7 +23,7 @@ title: "UserFrosting | Gallery"
     <div class="container portfolio">            
         <div class="row">
             <div class="col-sm-4 portfolio-item">
-                <a href="http://bloomingtontutors.com/" rel="nofollow" class="portfolio-link">
+                <a href="https://bloomingtontutors.com/" class="portfolio-link">
                     <div class="caption">
                         <div class="caption-content">
                             Bloomington Tutors
@@ -32,6 +32,16 @@ title: "UserFrosting | Gallery"
                     <img src="{{site.url}}/img/gallery/gallery-1-1.png" class="img-responsive" alt="Bloomington Tutors: One-on-one, on-campus tutoring at IU Bloomington.">
                 </a>
             </div>
+            <div class="col-sm-4 portfolio-item">
+                <a href="http://towson-tutors.com/" class="portfolio-link">
+                    <div class="caption">
+                        <div class="caption-content">
+                            Towson Tutors
+                        </div>
+                    </div>
+                    <img src="{{site.url}}/img/gallery/gallery-towson-tutors.png" class="img-responsive" alt="Towson Tutors: Private one-on-one tutoring at Towson University.">
+                </a>
+            </div>            
             <div class="col-sm-4 portfolio-item">
                 <a href="https://www.quizevolved.com/" rel="nofollow" class="portfolio-link">
                     <div class="caption">
