--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
         </div>
         <div class="row row-buttons">
             <div class="col-sm-6">
-                <a class="btn btn-link" href="{{site.url}}/0.2.2">v0.2.2 documentation</a>
+                <a class="btn btn-link" href="{{site.url}}/0.2.2">v0.2.2 (old version) documentation</a>
             </div>
             <div class="col-sm-6">
                 <a class="btn btn-link" href="https://gitter.im/alexweissman/UserFrosting">Join us in chat</a>
