--- a/0.3.0/tutorials/lesson-1-new-page/index.html
+++ b/0.3.0/tutorials/lesson-1-new-page/index.html
@@ -4,11 +4,12 @@ title: "UserFrosting | Tutorials | Lesson 1: Creating a New Page"
 ---
 
 <header class="breadcrumb-header">
-    <div class="container">
+    {% include version-menu.html %}
+    <div class="container">    
         <ol class="breadcrumb">
             <li><a href="{{site.url}}/">Home</a></li>
             <li><a href="{{site.url}}/#get-started">Getting Started</a></li>
-            <li><a href="{{site.url}}/tutorials">Tutorials</a></li>    
+            <li><a href="{{site.url}}/0.3.0/tutorials">Tutorials</a></li>    
             <li class="active">Creating a new page</li>
         </ol>
         <div class="row">
