--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@ title: "UserFrosting | Modern, open source user management for PHP"
                 <a class="btn btn-outline btn-lg btn-block" href="https://github.com/alexweissman/UserFrosting" class="btn btn-outline btn-lg btn-block">&nbsp;<i class="fa fa-github-alt"></i> &nbsp;GITHUB&nbsp;&nbsp;</a>
             </div>
         </div>
-        <div class="row row-buttons">
-            <div class="col-sm-6">
-                <a class="btn btn-link" href="{{site.url}}/0.2.2">v0.2.2 (old version) documentation</a>
-            </div>
-            <div class="col-sm-6">
-                <a class="btn btn-link" href="https://gitter.im/alexweissman/UserFrosting">Join us in chat</a>
-            </div>
-        </div>
     </div>
 </header>
 
@@ -157,7 +149,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
                 <div class="col-sm-4">
                     <i class="fa fa-database"></i>
                     <h4>Data Modeling</h4>
-                    <p>UserFrosting 0.3.0 boasts a rich object-oriented data model that can easily be modified and extended.</p>
+                    <p>UserFrosting 0.3.1 boasts a rich object-oriented data model built on top of Laravel's <a href="http://laravel.com/docs/5.0/eloquent">Eloquent ORM</a>.</p>
                 </div>          
             </div>
             <div class="row">
