--- a/installation/index.html
+++ b/installation/index.html
@@ -122,7 +122,7 @@ title: "UserFrosting | Installing UserFrosting"
                 </pre>
                 </p>
                 <p>
-                Change <code>AllowOverride None</code> to <code>AllowOverride All</code>.
+                where <code>blah/blah/blah</code> is the public directory into which UserFrosting is being installed.   There may be several blocks like this, so make sure you find the one for your installation directory!  In this block, change <code>AllowOverride None</code> to <code>AllowOverride All</code>.
                 </p>
                 
                 <h3>Step 1c: Restart Apache</h3>
