--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ title: "UserFrosting | Modern, open source user management for PHP"
         </div>
         <div class="row row-buttons">   
             <div class="col-sm-4">       
-                <a class="btn btn-outline btn-lg btn-block" href="https://github.com/alexweissman/UserFrosting/zipball/master"><i class="fa fa-download"></i> DOWNLOAD</a>
+                <a class="btn btn-outline btn-lg btn-block" href="https://github.com/userfrosting/UserFrosting/zipball/master"><i class="fa fa-download"></i> DOWNLOAD</a>
             </div>
             <div class="col-sm-4" >
                 <a class="btn btn-outline btn-lg btn-block" href="http://uf-demo.alexanderweissman.com/" target="_blank"><i class="fa fa-user"></i> &nbsp;&nbsp;&nbsp;DEMO&nbsp;&nbsp;&nbsp;</a>
             </div>
             <div class="col-sm-4">
-                <a class="btn btn-outline btn-lg btn-block" href="https://github.com/alexweissman/UserFrosting" class="btn btn-outline btn-lg btn-block">&nbsp;<i class="fa fa-github-alt"></i> &nbsp;GITHUB&nbsp;&nbsp;</a>
+                <a class="btn btn-outline btn-lg btn-block" href="https://github.com/userfrosting/UserFrosting" class="btn btn-outline btn-lg btn-block">&nbsp;<i class="fa fa-github-alt"></i> &nbsp;GITHUB&nbsp;&nbsp;</a>
             </div>
         </div>
     </div>
@@ -230,7 +230,31 @@ title: "UserFrosting | Modern, open source user management for PHP"
                         Security
                     </div>
                 </a> 
-            </div>          
+            </div>
+            <div class="col-sm-4 palette-button">
+                <a href="{{site.url}}/api/namespace-UserFrosting.html" class="palette-link">
+                    <div class="palette-text">
+                        <i class="fa fa-4x fa-code"></i><br>
+                        API Documentation
+                    </div>
+                </a> 
+            </div>
+            <div class="col-sm-4 palette-button">
+                <a href="{{site.url}}/plugins" class="palette-link">
+                    <div class="palette-text">
+                        <i class="fa fa-4x fa-plug"></i><br>
+                        Plugins
+                    </div>
+                </a> 
+            </div>
+            <div class="col-sm-4 palette-button">
+                <a href="{{site.url}}/gallery" class="palette-link">
+                    <div class="palette-text">
+                        <i class="fa fa-4x fa-users"></i><br>
+                        Who Uses UF?
+                    </div>
+                </a> 
+            </div>             
         </div>
     </div>
 </section>    
@@ -433,8 +457,8 @@ title: "UserFrosting | Modern, open source user management for PHP"
                         <p>If you're just getting started with UserFrosting and the code looks completely different from anything you've ever seen before, we recommend that you start with <a href="{{site.url}}/navigating/">Navigating UserFrosting</a>.  This will explain the components and practices that UserFrosting uses to do its magic.</p>
                         <p>If you're having trouble with installation, please see our <a href="{{site.url}}/troubleshooting">troubleshooting guide</a>.</p>
                         <p>If you feel comfortable with the basic concepts, and were able to install UserFrosting successfully, you can dive into the code with our <a href="{{site.url}}/tutorials">tutorials</a>.</p>
-                        <p>If you have a problem that you've already tried to solve and you can ask a specific, focused question (preferably including the relevant code, and any errors reported in your PHP error log and/or browser console), consider asking a question on <a href="http://stackoverflow.com">Stack Overflow</a>.  We don't have our own tag yet, but you can use the tags for the technologies that UserFrosting is built upon (like Slim, Twig, etc.).  You should then cross-post a link to your question in our <a href="https://gitter.im/alexweissman/UserFrosting">chat room</a>.</p>
-                        <p>If you've <strong>already done all of this</strong> and need more help, please join us in <a href="https://gitter.im/alexweissman/UserFrosting">chat</a>.  We'll do our best to help you out.</p>
+                        <p>If you have a problem that you've already tried to solve and you can ask a specific, focused question (preferably including the relevant code, and any errors reported in your PHP error log and/or browser console), consider asking a question on <a href="http://stackoverflow.com">Stack Overflow</a>.  We don't have our own tag yet, but you can use the tags for the technologies that UserFrosting is built upon (like Slim, Twig, etc.).  You should then cross-post a link to your question in our <a href="https://gitter.im/userfrosting/UserFrosting">chat room</a>.</p>
+                        <p>If you've <strong>already done all of this</strong> and need more help, please join us in <a href="https://gitter.im/userfrosting/UserFrosting">chat</a>.  We'll do our best to help you out.</p>
                     </div>
                     <div class="col-lg-10 col-lg-offset-1 text-center">
                         <button type="button" class="btn btn-modal" data-dismiss="modal"><i class="fa fa-times"></i> Ok, got it!</button>
@@ -464,12 +488,12 @@ title: "UserFrosting | Modern, open source user management for PHP"
                         <p><strong>But first</strong>, please make sure it is a problem with <i>UserFrosting</i>, and not a problem with the way your server is configured.  If you're getting a "white screen of death" when you try to install, there is a good chance that your server is not configured properly.  See the <a href="{{site.url}}/troubleshooting">troubleshooting guide</a> for help.</p>
                         <p>We recommend that you install a local development server on your computer, rather than <a href="https://pbs.twimg.com/media/BxfENwpIYAAcHqQ.png" rel="nofollow">testing your code directly on the production server.</a>  This means you can test your code directly on your own computer, making development faster and without the risk of exposing sensitive information to the public.  We recommend installing <a href="https://www.apachefriends.org">XAMPP</a> if you don't already have a local server set up.</p>
                         <p>Please also make sure you check the <a href="{{site.url}}/installation">installation requirements</a>.  <strong>Notably, UserFrosting requires PHP 5.4 or higher to work!</strong></p>
-                        <p>If you know all of this already, and you're pretty sure the problem is in our code, please <a href="https://github.com/alexweissman/UserFrosting/issues">open up an issue</a>.  Try to provide as much information as possible, including what you were doing when the problem occurred, what type of server you are running on (Apache, IIS, nginx, etc), and any errors in your PHP error log and/or browser console.</p>
+                        <p>If you know all of this already, and you're pretty sure the problem is in our code, please <a href="https://github.com/userfrosting/UserFrosting/issues">open up an issue</a>.  Try to provide as much information as possible, including what you were doing when the problem occurred, what type of server you are running on (Apache, IIS, nginx, etc), and any errors in your PHP error log and/or browser console.</p>
 
                         <h3>Tips for reporting issues</h3>
                         <ul>
                           <li>Remember that courtesy and proper grammar go a long way. Please take the time to craft a <strong>precise, polite issue</strong>. We will do our best to help, but remember that this is an open source project - none of us are getting paid a salary to develop this project, or act as your personal support hotline ;-)</li>
-                          <li>Carefully search the <a href="https://github.com/alexweissman/UserFrosting/issues?utf8=%E2%9C%93&q=is%3Aissue">existing issues</a>, both opened and closed.  Your question may have already been asked and answered before!</li>
+                          <li>Carefully search the <a href="https://github.com/userfrosting/UserFrosting/issues?utf8=%E2%9C%93&q=is%3Aissue">existing issues</a>, both opened and closed.  Your question may have already been asked and answered before!</li>
                           <li>Report any error messages you get. There are two main places where you may find error messages:
                             <ul>
                               <li>Backend (PHP-related) errors: in your PHP error log. This is usually a file called <code>php_error_log</code> or something like that. In XAMPP, the default location of this file is <code>XAMPP/xamppfiles/logs/</code>. For other web hosting platforms, please consult the documentation or do a quick Google search (i.e. "where is the php error log in _____"). Some web hosts may provide a special interface for accessing the php error log, through ssh, cpanel, etc. Please ask them directly for help with this.
@@ -504,8 +528,8 @@ title: "UserFrosting | Modern, open source user management for PHP"
                         <hr class="star-primary">
                     </div>
                     <div class="col-lg-10 col-lg-offset-1 text-left">
-                        <p>Needless to say, we get tons of feature requests. If you'd like to make a suggestion, you must first search the <a href="https://github.com/alexweissman/UserFrosting/issues?utf8=%E2%9C%93&q=is%3Aissue">existing issues</a>, both opened and closed.  Your question may have already been asked and answered before!</p>
-                        <p>If your suggestion doesn't appear to have been made before, you may <a href="https://github.com/alexweissman/UserFrosting/issues/new">open a new issue</a>.  Please note that we have a massive "todo" list for UserFrosting, so it may take us a long time to get to your suggestion.  If you'd like, you may volunteer to contribute code, or even consider <a href="{{site.url}}/components/#plugins">writing a plugin</a>.</p>
+                        <p>Needless to say, we get tons of feature requests. If you'd like to make a suggestion, you must first search the <a href="https://github.com/userfrosting/UserFrosting/issues?utf8=%E2%9C%93&q=is%3Aissue">existing issues</a>, both opened and closed.  Your question may have already been asked and answered before!</p>
+                        <p>If your suggestion doesn't appear to have been made before, you may <a href="https://github.com/userfrosting/UserFrosting/issues/new">open a new issue</a>.  Please note that we have a massive "todo" list for UserFrosting, so it may take us a long time to get to your suggestion.  If you'd like, you may volunteer to contribute code, or even consider <a href="{{site.url}}/components/#plugins">writing a plugin</a>.</p>
                     </div>
                     <div class="col-lg-10 col-lg-offset-1 text-center">
                         <button type="button" class="btn btn-modal" data-dismiss="modal"><i class="fa fa-times"></i> Ok, got it!</button>
@@ -531,7 +555,7 @@ title: "UserFrosting | Modern, open source user management for PHP"
                         <hr class="star-primary">
                     </div>
                     <div class="col-lg-10 col-lg-offset-1 text-left">
-                        <p>Yes, we'd love your help!  Join us in <a href="https://gitter.im/alexweissman/UserFrosting">chat</a> and we can talk about how you can become a contributor.</p>
+                        <p>Yes, we'd love your help!  Join us in <a href="https://gitter.im/userfrosting/UserFrosting">chat</a> and we can talk about how you can become a contributor.</p>
                     </div>
                     <div class="col-lg-10 col-lg-offset-1 text-center">
                         <button type="button" class="btn btn-modal" data-dismiss="modal"><i class="fa fa-times"></i> Ok, got it!</button>
