--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -41,7 +41,9 @@ title: "UserFrosting | Tutorials"
         <h2>User-submitted Content</h2>
         <div class="row">
             <div class="col-lg-12">
-                <p><strong><a href="https://github.com/alexweissman/UserFrosting/wiki">UserFrosting Wiki</a></strong></p>
+                <p><strong><a href="https://github.com/userfrosting/Upgrade">Database migration script</a></strong></p>
+                <p>Script for migrating database structure from 0.3.0 to 0.3.1 (thanks @Netrilix).</p>            
+                <p><strong><a href="https://github.com/userfrosting/UserFrosting/wiki">UserFrosting Wiki</a></strong></p>
                 <p>User-submitted troubleshooting, tutorials, and code snippets.</p>
                 <p><strong><a href="https://www.youtube.com/watch?v=sCOP7j3Gq7I">Video installation tutorial (German language)</a></strong></p>
                 <p>A walkthrough for installing UserFrosting 0.3.x, courtesy of <a href="http://bootstrapaholic.de/">Bootstrapaholic</a>.</p>             
